src/app/tasks.css
/* Titel des Containers */
.tasks-container h1 {
  color: white; /* Setze die Schriftfarbe auf weiß */
  font-size: 24px; /* Optional: Schriftgröße anpassen */
  font-weight: bold; /* Optional: Fett setzen */
  text-align: center; /* Optional: Zentrieren */
  margin-bottom: 3%;
}

/* Tasks Container */
.tasks-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 70%; /* Der Container nimmt nun nur 70% der Seitenbreite ein */
  max-width: 800px; /* Begrenze die Breite für größere Bildschirme */
  margin: 0 auto; /* Zentriert den Container auf der Seite */
  padding: 1rem;
  background-color: #222; /* Dunkler Hintergrund für den Container */
  border-radius: 10px;
}

/* Neue Aufgabe Eingabe */
.new-task {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin-bottom: 1rem;
}

.new-task input,
.new-task textarea {
  padding: 0.5rem;
  margin-bottom: 0.75rem; /* Weniger Abstand zwischen den Feldern */
  border-radius: 8px;
  border: 1px solid #444;
  background-color: #333;
  color: white;
  font-size: 14px; /* Kleinere Schriftgröße für die Eingabefelder */
}

.new-task button {
  padding: 0.5rem 1rem;
  border: none;
  border-radius: 8px;
  background-color: #f9b533;
  color: black;
  font-weight: bold;
  cursor: pointer;
  transition: background-color 0.3s ease;
  font-size: 14px; /* Kleinere Schriftgröße für Buttons */
}

.new-task button:hover {
  background-color: #d78f17;
}

/* Aufgabenliste */
ul {
  list-style-type: none;
  padding: 0;
  width: 100%;
}

li {
  background-color: #333;
  border-radius: 8px;
  margin: 0.5rem 0;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  align-items: flex-start; /* Linksbündige Ausrichtung */
}

li h2 {
  font-size: 18px; /* Kleinere Schriftgröße für Titel */
  margin: 0 0 0.5rem 0;
}

li p {
  font-size: 14px; /* Kleinere Schriftgröße für Beschreibung */
  margin: 0.5rem 0;
}

li button {
  padding: 0.5rem;
  border: none;
  border-radius: 8px;
  background-color: #f9b533;
  color: black;
  font-weight: bold;
  cursor: pointer;
  margin-top: 0.5rem;
  transition: background-color 0.3s ease;
  font-size: 14px; /* Kleinere Schriftgröße für Buttons */
}

li button:hover {
  background-color: #d78f17;
}

